// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostTest PostTest component 1`] = `
<div
  className="score unlock"
>
  <div
    className="overview"
  >
    <h1>
       Overview
    </h1>
    <div
      className="recorded-score is-null"
    >
      <h2>
        Recorded Score:
      </h2>
      <span
        className="value"
      >
        Did Not Pass
      </span>
    </div>
    <div
      className="obojobo-draft--sections--assessment--lti-status is-not-synced"
    >
      <h2>
        There was a problem sending your score to mockLTIHost.
      </h2>
      <p>
        Don’t worry - your score is safely recorded here. We just weren’t able to send it to mockLTIHost. Click the button below to resend your score:
      </p>
      <div
        className="obojobo-draft--components--button is-dangerous align-center"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Try again anyway
        </button>
      </div>
    </div>
    <div
      className="score-actions-page"
    >
      <p>
        mockMessage
      </p>
    </div>
  </div>
  <div
    className="attempt-history"
  >
    <h1>
      Attempt History:
    </h1>
  </div>
</div>
`;

exports[`PostTest PostTest component with recorded score 1`] = `
<div
  className="score unlock"
>
  <div
    className="overview"
  >
    <h1>
       Overview
    </h1>
    <div
      className="recorded-score is-not-null"
    >
      <h2>
        Recorded Score:
      </h2>
      <span
        className="value"
      >
        100
      </span>
      <span
        className="from-attempt"
      >
        From attempt mockAttemptNumber
      </span>
    </div>
    <div
      className="obojobo-draft--sections--assessment--lti-status is-not-synced"
    >
      <h2>
        There was a problem sending your score to mockLTIHost.
      </h2>
      <p>
        Don’t worry - your score is safely recorded here. We just weren’t able to send it to mockLTIHost. Click the button below to resend your score:
      </p>
      <div
        className="obojobo-draft--components--button is-dangerous align-center"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Try again anyway
        </button>
      </div>
    </div>
    <div
      className="score-actions-page"
    >
      <div
        className="component obojobo-draft--pages--page"
        data-focussed={false}
        data-id="2692c3fa-2bd9-4f62-a83f-a173b4770017"
        data-obo-component={true}
        data-type="ObojoboDraft.Pages.Page"
        id="obo-2692c3fa-2bd9-4f62-a83f-a173b4770017"
      >
        <div
          className="component"
          data-focussed={false}
          data-id="084af3aa-18be-41d5-9938-1b4c311403fa"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Heading"
          id="obo-084af3aa-18be-41d5-9938-1b4c311403fa"
        >
          <div
            className="text-chunk obojobo-draft--chunks--heading pad"
          >
            <h1>
              <span
                className="text align-center"
                data-group-index="0"
                data-indent={0}
              >
                <span>
                  <span>
                    <span>
                      Not quite!
                    </span>
                  </span>
                </span>
              </span>
            </h1>
          </div>
        </div>
        <div
          className="component"
          data-focussed={false}
          data-id="13b82592-8c45-4fe7-9d00-32a66f4d7418"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.ActionButton"
          id="obo-13b82592-8c45-4fe7-9d00-32a66f4d7418"
        >
          <div
            className="text-chunk obojobo-draft--chunks--action-button pad"
          >
            <div
              className="obojobo-draft--components--button is-not-dangerous align-center"
            >
              <button
                disabled={undefined}
                onClick={[Function]}
                tabIndex={undefined}
              >
                <span
                  className="text align-undefined"
                  data-group-index="0"
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Try again ( attempts left)
                      </span>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="attempt-history"
  >
    <h1>
      Attempt History:
    </h1>
  </div>
</div>
`;

exports[`PostTest PostTest component with review 1`] = `
<div
  className="score unlock"
>
  <div
    className="overview"
  >
    <h1>
       Overview
    </h1>
    <div
      className="recorded-score is-not-null"
    >
      <h2>
        Recorded Score:
      </h2>
      <span
        className="value"
      >
        100
      </span>
      <span
        className="from-attempt"
      >
        From attempt mockAttemptNumber
      </span>
    </div>
    <div
      className="obojobo-draft--sections--assessment--lti-status is-not-synced"
    >
      <h2>
        There was a problem sending your score to mockLTIHost.
      </h2>
      <p>
        Don’t worry - your score is safely recorded here. We just weren’t able to send it to mockLTIHost. Click the button below to resend your score:
      </p>
      <div
        className="obojobo-draft--components--button is-dangerous align-center"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Try again anyway
        </button>
      </div>
    </div>
    <div
      className="score-actions-page"
    >
      <div
        className="component obojobo-draft--pages--page"
        data-focussed={false}
        data-id="2692c3fa-2bd9-4f62-a83f-a173b4770017"
        data-obo-component={true}
        data-type="ObojoboDraft.Pages.Page"
        id="obo-2692c3fa-2bd9-4f62-a83f-a173b4770017"
      >
        <div
          className="component"
          data-focussed={false}
          data-id="084af3aa-18be-41d5-9938-1b4c311403fa"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Heading"
          id="obo-084af3aa-18be-41d5-9938-1b4c311403fa"
        >
          <div
            className="text-chunk obojobo-draft--chunks--heading pad"
          >
            <h1>
              <span
                className="text align-center"
                data-group-index="0"
                data-indent={0}
              >
                <span>
                  <span>
                    <span>
                      Not quite!
                    </span>
                  </span>
                </span>
              </span>
            </h1>
          </div>
        </div>
        <div
          className="component"
          data-focussed={false}
          data-id="13b82592-8c45-4fe7-9d00-32a66f4d7418"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.ActionButton"
          id="obo-13b82592-8c45-4fe7-9d00-32a66f4d7418"
        >
          <div
            className="text-chunk obojobo-draft--chunks--action-button pad"
          >
            <div
              className="obojobo-draft--components--button is-not-dangerous align-center"
            >
              <button
                disabled={undefined}
                onClick={[Function]}
                tabIndex={undefined}
              >
                <span
                  className="text align-undefined"
                  data-group-index="0"
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Try again ( attempts left)
                      </span>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="attempt-history"
  >
    <h1>
      Attempt History:
    </h1>
  </div>
</div>
`;

exports[`PostTest PostTest component with review after all attempts - attempts remaining 1`] = `
<div
  className="score unlock"
>
  <div
    className="overview"
  >
    <h1>
       Overview
    </h1>
    <div
      className="recorded-score is-not-null"
    >
      <h2>
        Recorded Score:
      </h2>
      <span
        className="value"
      >
        100
      </span>
      <span
        className="from-attempt"
      >
        From attempt mockAttemptNumber
      </span>
    </div>
    <div
      className="obojobo-draft--sections--assessment--lti-status is-not-synced"
    >
      <h2>
        There was a problem sending your score to mockLTIHost.
      </h2>
      <p>
        Don’t worry - your score is safely recorded here. We just weren’t able to send it to mockLTIHost. Click the button below to resend your score:
      </p>
      <div
        className="obojobo-draft--components--button is-dangerous align-center"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Try again anyway
        </button>
      </div>
    </div>
    <div
      className="score-actions-page"
    >
      <div
        className="component obojobo-draft--pages--page"
        data-focussed={false}
        data-id="2692c3fa-2bd9-4f62-a83f-a173b4770017"
        data-obo-component={true}
        data-type="ObojoboDraft.Pages.Page"
        id="obo-2692c3fa-2bd9-4f62-a83f-a173b4770017"
      >
        <div
          className="component"
          data-focussed={false}
          data-id="084af3aa-18be-41d5-9938-1b4c311403fa"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Heading"
          id="obo-084af3aa-18be-41d5-9938-1b4c311403fa"
        >
          <div
            className="text-chunk obojobo-draft--chunks--heading pad"
          >
            <h1>
              <span
                className="text align-center"
                data-group-index="0"
                data-indent={0}
              >
                <span>
                  <span>
                    <span>
                      Not quite!
                    </span>
                  </span>
                </span>
              </span>
            </h1>
          </div>
        </div>
        <div
          className="component"
          data-focussed={false}
          data-id="13b82592-8c45-4fe7-9d00-32a66f4d7418"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.ActionButton"
          id="obo-13b82592-8c45-4fe7-9d00-32a66f4d7418"
        >
          <div
            className="text-chunk obojobo-draft--chunks--action-button pad"
          >
            <div
              className="obojobo-draft--components--button is-not-dangerous align-center"
            >
              <button
                disabled={undefined}
                onClick={[Function]}
                tabIndex={undefined}
              >
                <span
                  className="text align-undefined"
                  data-group-index="0"
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Try again ( attempts left)
                      </span>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="attempt-history"
  >
    <h1>
      Attempt History:
    </h1>
  </div>
</div>
`;

exports[`PostTest PostTest component with review after all attempts - no attempts remaining 1`] = `
<div
  className="score unlock"
>
  <div
    className="overview"
  >
    <h1>
       Overview
    </h1>
    <div
      className="recorded-score is-not-null"
    >
      <h2>
        Recorded Score:
      </h2>
      <span
        className="value"
      >
        100
      </span>
      <span
        className="from-attempt"
      >
        From attempt mockAttemptNumber
      </span>
    </div>
    <div
      className="obojobo-draft--sections--assessment--lti-status is-not-synced"
    >
      <h2>
        There was a problem sending your score to mockLTIHost.
      </h2>
      <p>
        Don’t worry - your score is safely recorded here. We just weren’t able to send it to mockLTIHost. Click the button below to resend your score:
      </p>
      <div
        className="obojobo-draft--components--button is-dangerous align-center"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Try again anyway
        </button>
      </div>
    </div>
    <div
      className="score-actions-page"
    >
      <div
        className="component obojobo-draft--pages--page"
        data-focussed={false}
        data-id="2692c3fa-2bd9-4f62-a83f-a173b4770017"
        data-obo-component={true}
        data-type="ObojoboDraft.Pages.Page"
        id="obo-2692c3fa-2bd9-4f62-a83f-a173b4770017"
      >
        <div
          className="component"
          data-focussed={false}
          data-id="084af3aa-18be-41d5-9938-1b4c311403fa"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Heading"
          id="obo-084af3aa-18be-41d5-9938-1b4c311403fa"
        >
          <div
            className="text-chunk obojobo-draft--chunks--heading pad"
          >
            <h1>
              <span
                className="text align-center"
                data-group-index="0"
                data-indent={0}
              >
                <span>
                  <span>
                    <span>
                      Not quite!
                    </span>
                  </span>
                </span>
              </span>
            </h1>
          </div>
        </div>
        <div
          className="component"
          data-focussed={false}
          data-id="13b82592-8c45-4fe7-9d00-32a66f4d7418"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.ActionButton"
          id="obo-13b82592-8c45-4fe7-9d00-32a66f4d7418"
        >
          <div
            className="text-chunk obojobo-draft--chunks--action-button pad"
          >
            <div
              className="obojobo-draft--components--button is-not-dangerous align-center"
            >
              <button
                disabled={undefined}
                onClick={[Function]}
                tabIndex={undefined}
              >
                <span
                  className="text align-undefined"
                  data-group-index="0"
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Try again ( attempts left)
                      </span>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="attempt-history"
  >
    <h1>
      Attempt History:
    </h1>
  </div>
</div>
`;

exports[`PostTest PostTest component with scoreAction 1`] = `
<div
  className="score unlock"
>
  <div
    className="overview"
  >
    <h1>
       Overview
    </h1>
    <div
      className="recorded-score is-null"
    >
      <h2>
        Recorded Score:
      </h2>
      <span
        className="value"
      >
        Did Not Pass
      </span>
    </div>
    <div
      className="obojobo-draft--sections--assessment--lti-status is-not-synced"
    >
      <h2>
        There was a problem sending your score to mockLTIHost.
      </h2>
      <p>
        Don’t worry - your score is safely recorded here. We just weren’t able to send it to mockLTIHost. Click the button below to resend your score:
      </p>
      <div
        className="obojobo-draft--components--button is-dangerous align-center"
      >
        <button
          disabled={undefined}
          onClick={[Function]}
          tabIndex={undefined}
        >
          Try again anyway
        </button>
      </div>
    </div>
    <div
      className="score-actions-page"
    >
      <div
        className="component obojobo-draft--pages--page"
        data-focussed={false}
        data-id="2692c3fa-2bd9-4f62-a83f-a173b4770017"
        data-obo-component={true}
        data-type="ObojoboDraft.Pages.Page"
        id="obo-2692c3fa-2bd9-4f62-a83f-a173b4770017"
      >
        <div
          className="component"
          data-focussed={false}
          data-id="084af3aa-18be-41d5-9938-1b4c311403fa"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.Heading"
          id="obo-084af3aa-18be-41d5-9938-1b4c311403fa"
        >
          <div
            className="text-chunk obojobo-draft--chunks--heading pad"
          >
            <h1>
              <span
                className="text align-center"
                data-group-index="0"
                data-indent={0}
              >
                <span>
                  <span>
                    <span>
                      Not quite!
                    </span>
                  </span>
                </span>
              </span>
            </h1>
          </div>
        </div>
        <div
          className="component"
          data-focussed={false}
          data-id="13b82592-8c45-4fe7-9d00-32a66f4d7418"
          data-obo-component={true}
          data-type="ObojoboDraft.Chunks.ActionButton"
          id="obo-13b82592-8c45-4fe7-9d00-32a66f4d7418"
        >
          <div
            className="text-chunk obojobo-draft--chunks--action-button pad"
          >
            <div
              className="obojobo-draft--components--button is-not-dangerous align-center"
            >
              <button
                disabled={undefined}
                onClick={[Function]}
                tabIndex={undefined}
              >
                <span
                  className="text align-undefined"
                  data-group-index="0"
                  data-indent={0}
                >
                  <span>
                    <span>
                      <span>
                        Try again ( attempts left)
                      </span>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="attempt-history"
  >
    <h1>
      Attempt History:
    </h1>
  </div>
</div>
`;
